# git-ai

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SCRATCHPAD_REBASE_PERF.md  Taskfile.yml  flake.nix  install.ps1
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  e2e-tests.yml  git-core-compat.yml  install-scripts-local.yml  intellij-build.yml  intellij-ui-tests.yml  lint-format.yml  nightly-agent-integration.yml  perf-probe.yml  performance-benchmarks.yml  release-vscode-extension.yml  release.yml  test.yml
agent-support/intellij/: build.gradle.kts  gradle.properties
agent-support/neovim/: README.md
agent-support/opencode/: README.md  git-ai.ts  package.json
agent-support/pi/: README.md  git-ai.ts
agent-support/vscode/: package.json  tsconfig.json
scripts/: dev.ps1  dev.sh
scripts/nightly/: verify-hook-wiring.sh
src/: config.rs  daemon.rs  error.rs  feature_flags.rs  lib.rs  main.rs  utils.rs
src/api/: cas.rs  client.rs  metrics.rs
src/auth/: client.rs  credentials.rs
src/authorship/: agent_detection.rs  attribution_tracker.rs  authorship_log.rs  authorship_log_serialization.rs  diff_ai_accepted.rs  git_ai_hooks.rs  ignore.rs  internal_db.rs  post_commit.rs  pre_commit.rs  prompt_utils.rs  range_authorship.rs  rebase_authorship.rs  secrets.rs  stats.rs  virtual_attribution.rs  working_log.rs
src/ci/: ci_context.rs  gitlab.rs
src/commands/: blame.rs  checkpoint.rs  ci_handlers.rs  daemon.rs  diff.rs  exchange_nonce.rs  fetch_notes.rs  flush_metrics_db.rs  git_ai_handlers.rs  git_handlers.rs  git_hook_handlers.rs  install_hooks.rs  log.rs  login.rs  logout.rs  mod.rs  prompt_event.rs  prompts_db.rs  show_prompt.rs  simulate_authorship.rs  status.rs  synopsis.rs  upgrade.rs  whoami.rs
src/daemon/: control_api.rs  coordinator.rs  domain.rs  family_actor.rs  git_backend.rs  global_actor.rs  reducer.rs  rewrite_inference.rs  sentry_layer.rs  telemetry_handle.rs  telemetry_worker.rs  test_sync.rs  trace_normalizer.rs  wrapper_trace.rs
src/git/: cli_parser.rs  command_classification.rs  mod.rs  refs.rs  repo_state.rs  repo_storage.rs  repository.rs  rewrite_log.rs  status.rs  sync_authorship.rs
src/mdm/: skills_installer.rs  utils.rs
src/metrics/: db.rs  events.rs  mod.rs  pos_encoded.rs  types.rs
src/observability/: flush.rs  mod.rs  perf.rs  wrapper_performance_targets.rs
src/synopsis/: collector.rs  commands.rs  config.rs  conversation.rs  generator.rs  mod.rs  storage.rs  types.rs
tests/: amend.rs  async_mode.rs  cherry_pick.rs  commit_tree_update_ref.rs  config_fresh_test.rs  daemon_mode.rs  daemon_repository_policy.rs  hooks_feature_flags.rs  non_utf8_files.rs  notes_sync_regression.rs  performance.rs  prompt_event.rs  rebase.rs  squash_merge.rs  windows_install_script.rs  wrapper_daemon_mode.rs
tests/e2e/: user-scenarios.bats
tests/fixtures/: cursor-session-simple.jsonl  pi-session-ignorable.jsonl  pi-session-simple.jsonl  pi-session-tool.jsonl
tests/git-compat/: run-core-tests.py
tests/integration/: agent_commits_blame.rs  agent_presets_comprehensive.rs  agent_v1.rs  ai_reflow_attribution.rs  ai_tab.rs  amend.rs  amp.rs  bash_tool_benchmark.rs  bash_tool_conformance.rs  bash_tool_provenance.rs  bash_tool_timeouts.rs  blame_comprehensive.rs  checkout_switch.rs  checkpoint_explicit_paths.rs  checkpoint_perf_benchmark.rs  checkpoint_size.rs  (+75 more)
(+136 files in other folders)
