[package]
name = "git-ai"
version = "1.1.13"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
envy = "0.4"
sha2 = "0.10"
imara-diff = "0.2"
chrono = { version = "0.4.41", features = ["serde"] }
humantime = "2.3"
indicatif = "0.17"
smol = "1.3"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
git2 = { version = "0.20.2", optional = true }
jsonc-parser = { version = "0.27", features = ["cst"] }
dirs = "5.0"
minreq = { version = "2.12", features = ["https-rustls-probe"] }
url = "2.5"
glob = "0.3"
uuid = { version = "1.11", features = ["v4"] }
ratatui = "0.28"
zip = "2.1"
crossterm = "0.28"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"], optional = true }
once_cell = "1.19"
gix-config = "0.51.0"
regex = "1.10"
toml = "0.8"

[features]
test-support = ["git2"]
keyring = ["dep:keyring"]

[dev-dependencies]
git-ai = { path = ".", features = ["test-support"] }
rustls-native-certs = "0.8"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.38"
rand = "0.8"
regex = "1.10"
filetime = "0.2"
serial_test = "3.2"
rstest = "0.23"
paste = "1.0"
