[package]
name = "git-ai"
version = "1.2.7"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
envy = "0.4"
sha2 = "0.10"
imara-diff = "0.2"
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock", "std"] }
humantime = "2.3"
indicatif = "0.18"
smol = "2.0"
futures = "0.3"
tokio = { version = "1.45", features = ["rt-multi-thread", "sync", "time", "macros"] }
interprocess = "2.4"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
git2 = { version = "0.20.4", optional = true }
jsonc-parser = { version = "0.32", features = ["cst"] }
dirs = "5.0"
minreq = { version = "2.12", features = ["https-rustls-probe"] }
url = "2.5"
glob = "0.3"
ignore = "0.4"
uuid = { version = "1.23", features = ["v4"] }
ratatui = "0.30"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
crossterm = "0.29"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"], optional = true }
once_cell = "1.21"
gix-config = "0.53.0"
gix-index = "0.48.0"
regex = "1.12"
toml = "0.9"
unicode-normalization = "0.1"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"

[features]
test-support = ["git2"]
keyring = ["dep:keyring"]

[dev-dependencies]
git-ai = { path = ".", features = ["test-support"] }
rustls-native-certs = "0.8"
tempfile = "3.27"
insta = "1.47"
rand = "0.8"
regex = "1.12"
filetime = "0.2"
serial_test = "3.4"
rstest = "0.26"
paste = "1.0"

[profile.dev]
debug = 1                          # Line tables only -- smaller binaries, faster linking
split-debuginfo = "unpacked"       # macOS: dramatically faster linking

[profile.test]
debug = 1
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 2                      # Optimize proc macros and build scripts

[[test]]
name = "integration"
path = "tests/integration/main.rs"
harness = true
